Animation flicker fixed

--- a/style.css
+++ b/style.css
@@ -13,11 +13,6 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background-image: url('frames/frame1.svg');
-    background-color: black;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     color: white;
     padding: 10vh 20px;
     position: absolute;
@@ -25,6 +20,19 @@ body {
     right: 0;
     bottom: 0;
     top: 0;
+}
+
+.frame {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background-image: url('frames/frame1.svg');
+    background-color: black;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .header {
